@@ -116,7 +116,7 @@ public class LiquibaseConfiguration {
 
     protected  <T extends ConfigurationContainer> T createConfiguration(Class<T> type) {
         try {
-            T configuration = type.newInstance();
+            T configuration = type.getConstructor().newInstance();
             configuration.init(configurationValueProviders);
             return configuration;
         } catch (Exception e) {
@@ -142,5 +142,17 @@ public class LiquibaseConfiguration {
         }
 
         return StringUtil.join(reasons, " AND ");
+    }
+
+    /**
+     * Convenience method to check if the object types should consider catalog name
+     * also during comparision (equals(), hashcode() and compareTo())
+     *
+     * @return
+     */
+    public boolean shouldIncludeCatalogInSpecification() {
+        Boolean includeCatalog = getConfiguration(GlobalConfiguration.class)
+                .getValue(GlobalConfiguration.INCLUDE_CATALOG_IN_SPECIFICATION, Boolean.class);
+        return includeCatalog != null ? includeCatalog : false;
     }
 }
