@@ -137,14 +137,14 @@ public class MavenUtils {
     try {
       dbDriver = (Driver)Class.forName(driver,
                                        true,
-                                       classLoader).newInstance();
+                                       classLoader).getConstructor().newInstance();
     }
-    catch (InstantiationException | IllegalAccessException e) {
-      throw new LiquibaseException("Failed to load JDBC driver, " + driver, e);
-    } catch (ClassNotFoundException e) {
+    catch (ClassNotFoundException e) {
       throw new LiquibaseException("Missing Class '" + e.getMessage() + "'. Database "
                                    + "driver may not be included in the project "
                                    + "dependencies or with wrong scope.");
+    } catch (ReflectiveOperationException e) {
+      throw new LiquibaseException("Failed to load JDBC driver, " + driver, e);
     }
 
     Properties info = new Properties();
